# rasasa

./: .gitignore  AGENTS.md  README.md  config.toml  pyproject.toml
src/rasasa/: __init__.py  cli.py  config.py  dumps.py  engines.py  evaluation.py  pgn.py
